--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -13,12 +13,16 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.13.1",
     "lucide-react": "^0.464.0",
+    "mammoth": "^1.8.0",
     "next": "14.2.19",
+    "pdf2json": "^3.1.4",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "turndown": "^7.2.0"
   },
   "devDependencies": {
     "@types/node": "22.10.1",
