--- a/nextjs/.env
+++ b/nextjs/.env
@@ -1,1 +1,2 @@
-DB_PASSWORD=6jsvZ2vfCT6G183h
+DB_PASSWORD=6jsvZ2vfCT6G183;h
+OPENAI_API_KEY=sk-proj-Q4tqb4gZcAYTXPhklzUMT3BlbkFJVojgPV18nOhOvZfUFOEi
