--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.0.6",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "ai": "^4.0.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.2",
     "framer-motion": "^11.13.1",
     "lucide-react": "^0.464.0",
     "mammoth": "^1.8.0",
     "next": "14.2.19",
+    "pdf-parser-client-side": "^1.1.1",
+    "pdf2html": "^3.1.0",
     "pdf2json": "^3.1.4",
     "react": "^18",
     "react-dom": "^18",
