--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -12,10 +12,12 @@
     "@ai-sdk/openai": "^1.0.6",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@supabase/supabase-js": "^1.13.1",
     "ai": "^4.0.18",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
     "formidable": "^3.5.2",
     "framer-motion": "^11.13.1",
     "lucide-react": "^0.464.0",
